Finding min max and sum

--- a/00_pytorch_fundamentals.ipynb
+++ b/00_pytorch_fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMcG3hWTRgkScethfNbsnpX",
+      "authorship_tag": "ABX9TyOuAiL0uNGQf7LU9JxTDJC8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,12 +52,12 @@
       ],
       "metadata": {
         "id": "8opZ2hie0Tcq",
-        "outputId": "a419348f-87f7-40bc-f56e-53d913cbc794",
+        "outputId": "7a18000c-2b25-4659-b2fa-b28114697997",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -463,7 +463,7 @@
       "cell_type": "code",
       "source": [
         "#Random Tensors\n",
-        "rTensor = torch.rand(10,10,10)\n",
+        "rTensor = torch.rand(1,10,10)\n",
         "rTensor\n"
       ],
       "metadata": {
@@ -1473,10 +1473,435 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Matrix multiplication manually"
+      ],
+      "metadata": {
+        "id": "8QNZQLgmbe_M"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor_A = torch.tensor([[2,3],\n",
+        "                         [3,4],\n",
+        "                         [5,8]])\n",
+        "tensor_B = torch.tensor([[1,9],\n",
+        "                         [8,4],\n",
+        "                         [5,2]])\n",
+        "tensor_A.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IlTmyzULgwsU",
+        "outputId": "0a0c7e1f-7a98-4299-ab5c-7ebb20c02f24"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([3, 2])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor_B.shape\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Mj29Wae0hHMf",
+        "outputId": "82de691d-d98f-4a0c-d3bf-39d962ee280b"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([3, 2])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To fix the shape issue we can use the  **Transpose**"
+      ],
+      "metadata": {
+        "id": "HPts_cI0hLfs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor_B\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i036iQuthSru",
+        "outputId": "a85c2b65-6f1b-442d-8d46-eec8bc9f6bb2"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1, 9],\n",
+              "        [8, 4],\n",
+              "        [5, 2]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor_B.T # T is used to change the dimention of the the matrix"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rFvU8mv5h6DP",
+        "outputId": "843d5019-5048-4cd7-8d3d-8c684226e5da"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1, 8, 5],\n",
+              "        [9, 4, 2]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor_B.T.shape\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a654pkgHh8Hl",
+        "outputId": "a8903fbd-810d-4c58-b173-3013eda7548a"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([2, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.mm(tensor_A,tensor_B.T)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "heA6DBLeiE3a",
+        "outputId": "238c2b75-0f20-4e5f-9c57-a638d8ff7458"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[29, 28, 16],\n",
+              "        [39, 40, 23],\n",
+              "        [77, 72, 41]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Finding the min, max, mean sum (Tensor Aggrigation)"
+      ],
+      "metadata": {
+        "id": "UN4uFE82iQGe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x= torch.arange(0,100,10)\n",
+        "x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lj-Uw2HO__NI",
+        "outputId": "ad42d5a5-ac4f-4a47-94c0-2fdd2a95e323"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 0, 10, 20, 30, 40, 50, 60, 70, 80, 90])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UHOgwaQOAMmT",
+        "outputId": "465a8614-2c30-45d0-c336-b3377fb4e4bf"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.min()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jFZC-yj6Anrt",
+        "outputId": "02349fb6-8d8c-44ca-868c-5549170683e2"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(0)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.min(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fMCb6jMJAp3q",
+        "outputId": "2cea7c9f-f7d7-4c17-b1f3-9485b8d566f3"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(0)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.max()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lRiGFE4jAr4m",
+        "outputId": "fbffc608-b437-4e0e-94f1-b00aefbc42f5"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(90)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.max(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Otk7Xc4BBaWw",
+        "outputId": "3130553b-8a70-4f68-c594-c3b1d6cc7825"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(90)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.mean(x.type(torch.float32))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vjNXwZWhBceV",
+        "outputId": "ca6d9a9e-7598-4a9a-f0a7-e9553b973918"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(45.)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.type(torch.float32).mean()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "erVBgH9VB8Pg",
+        "outputId": "f878f92e-bcee-4302-f6cf-889cea82a3a4"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(45.)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.sum()"
+      ],
+      "metadata": {
+        "id": "NgWJdGnxCNXL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor.sum(x)"
+      ],
+      "metadata": {
+        "id": "ZRboeE9cFwix"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "8QNZQLgmbe_M"
+        "id": "wDLUkQR5GJjJ"
       },
       "execution_count": null,
       "outputs": []
