Selecting Data(indexing)

--- a/00_pytorch_fundamentals.ipynb
+++ b/00_pytorch_fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyP0O0X3n/KIuDvnE6hgiA5V",
+      "authorship_tag": "ABX9TyOiAimzIhwGEKzGMomgL0lr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1902,7 +1902,7 @@
     {
       "cell_type": "code",
       "source": [
-        "x_reshaped = x.reshape(3,3)\n",
+        "x_reshaped = x.reshape(1,9)\n",
         "x_reshaped"
       ],
       "metadata": {
@@ -1910,21 +1910,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bbbz9_H5OCLF",
-        "outputId": "da177726-947c-490e-827b-c3064ab92a08"
+        "outputId": "2bc25fb4-fb04-40fc-9150-3be3ce5f5444"
       },
-      "execution_count": 84,
+      "execution_count": 122,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([[1., 2., 3.],\n",
-              "        [4., 5., 6.],\n",
-              "        [7., 8., 9.]])"
+              "tensor([[1, 2, 3, 4, 5, 6, 7, 8, 9]])"
             ]
           },
           "metadata": {},
-          "execution_count": 84
+          "execution_count": 122
         }
       ]
     },
@@ -2027,10 +2025,562 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##Reshaping the array index"
+      ],
+      "metadata": {
+        "id": "TlPggJ0wRh27"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "x= torch.arange(1,10)\n",
+        "x,x.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jp34lxp3Y1ie",
+        "outputId": "f89d7be6-41ee-46b4-8949-943de37e73f7"
+      },
+      "execution_count": 99,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([1, 2, 3, 4, 5, 6, 7, 8, 9]), torch.Size([9]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 99
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_reshape = x.reshape(1,9)\n",
+        "x_reshape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eXwdhdVzY7_A",
+        "outputId": "b4be3468-5ae5-4f70-e126-f63d3e79bbe9"
+      },
+      "execution_count": 120,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1, 2, 3, 4, 5, 6, 7, 8, 9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 120
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_reshape.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H2xDf1otZTv0",
+        "outputId": "cece5b63-46b5-4c92-ce0e-374989146765"
+      },
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([3, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 107
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y = torch.tensor([[2,3,4],\n",
+        "                [4,3,6],\n",
+        "                [9,2,4]])\n",
+        "y.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xwNCV-z7Zme_",
+        "outputId": "0ec24f42-32b8-4709-e46d-30e7de9df237"
+      },
+      "execution_count": 118,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([3, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 118
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_reshaped"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FpgMIK1BcITf",
+        "outputId": "8f7bc3db-eceb-44a5-d5a9-bb378ab526ff"
+      },
+      "execution_count": 123,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1, 2, 3, 4, 5, 6, 7, 8, 9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 123
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_squeezed = x_reshaped.squeeze()"
+      ],
+      "metadata": {
+        "id": "SZri9pX7cKDy"
+      },
+      "execution_count": 128,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_squeezed.shape\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dk20HEIuce3j",
+        "outputId": "9942e538-7d13-473d-b729-f2b2393cc87f"
+      },
+      "execution_count": 129,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 129
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\" Original data of x was : {x_reshaped}\")\n",
+        "print(f\" Original dimension of x was : {x_reshaped.shape}\")\n",
+        "\n",
+        "print(f\" After squeezing x becomes: {x_squeezed}\")\n",
+        "print(f\" After squeezing x becomes: {x_squeezed.shape}\")\n",
+        "x_unsqueezed = x_squeezed.unsqueeze(dim =0)\n",
+        "\n",
+        "print(f\" After Unsqueezing x becomes: {x_unsqueezed}\")\n",
+        "print(f\" After Unsqueezing x becomes: {x_unsqueezed.shape}\")\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zYOuFRA6d7CB",
+        "outputId": "fed10cb5-6648-4e20-9951-2cc4330499d6"
+      },
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " Original data of x was : tensor([[1, 2, 3, 4, 5, 6, 7, 8, 9]])\n",
+            " Original dimension of x was : torch.Size([1, 9])\n",
+            " After squeezing x becomes: tensor([1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
+            " After squeezing x becomes: torch.Size([9])\n",
+            " After Unsqueezing x becomes: tensor([[1, 2, 3, 4, 5, 6, 7, 8, 9]])\n",
+            " After Unsqueezing x becomes: torch.Size([1, 9])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_original = torch.rand(size=[230,230,3]) #Height, Width and color manual\n",
+        "x_original.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "O83FIscsgWKy",
+        "outputId": "e421db98-52f0-4e51-9295-f0562bea66bb"
+      },
+      "execution_count": 135,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([230, 230, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 135
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_permuted = x_original.permute(2,1,0)\n",
+        "x_permuted.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tHzqV78th-a2",
+        "outputId": "c8deb454-9395-4749-8d5e-b81ea7af6d55"
+      },
+      "execution_count": 136,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([3, 230, 230])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 136
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_original[0][0][0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "F-z_scYrisPT",
+        "outputId": "e3ed57a5-d882-4f92-8fb1-0a34a8dd9e92"
+      },
+      "execution_count": 137,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(0.6189)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 137
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_permuted[0][0][0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RgokXCI_kSLW",
+        "outputId": "0d663538-3974-44da-9ba9-2c9142a5a0b6"
+      },
+      "execution_count": 138,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(0.6189)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 138
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Indexing (Searching the item at the particular index)"
+      ],
+      "metadata": {
+        "id": "W8STCJs7kW-5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "x= torch.arange(1,10).reshape(1,3,3)\n",
+        "x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VoMGh-G0lSBi",
+        "outputId": "b2d411d8-e472-428e-9b92-25fdc520a538"
+      },
+      "execution_count": 144,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[1, 2, 3],\n",
+              "         [4, 5, 6],\n",
+              "         [7, 8, 9]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 144
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_aOiGgZklpHM",
+        "outputId": "0d771736-7cd5-4a13-bb23-5c8b57d0cbe2"
+      },
+      "execution_count": 145,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1, 2, 3],\n",
+              "        [4, 5, 6],\n",
+              "        [7, 8, 9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 145
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x[0][0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iNDnYX55niml",
+        "outputId": "677010e8-07a6-4111-c2fc-5fc49c9926ce"
+      },
+      "execution_count": 146,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([1, 2, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 146
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x[0][0][1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HgWjjPJQnlp1",
+        "outputId": "60e6cb2e-dc4f-4363-f84f-a4f2309f845f"
+      },
+      "execution_count": 148,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(2)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 148
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x[:]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oPaETDbhnpwU",
+        "outputId": "6bf29b94-2f59-474e-8f11-2602f27712f4"
+      },
+      "execution_count": 149,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[1, 2, 3],\n",
+              "         [4, 5, 6],\n",
+              "         [7, 8, 9]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 149
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x[:,0] #To represent row element"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9F5YYjlgpHJ2",
+        "outputId": "e5dbb0b7-6d88-4283-d814-41fc224af95d"
+      },
+      "execution_count": 156,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1, 2, 3]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 156
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x[:][0][1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1cnzp6wzpKfa",
+        "outputId": "780b2c2e-f422-4ba6-fc67-43bd847a5f1f"
+      },
+      "execution_count": 151,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([4, 5, 6])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 151
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x[:,:, 1] # To represent column element"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C_WuNHEQpRJ0",
+        "outputId": "89c06297-1ee3-4ecb-da32-41e61c027af3"
+      },
+      "execution_count": 157,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[2, 5, 8]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 157
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "TlPggJ0wRh27"
+        "id": "JrWJ6XeEprxR"
       },
       "execution_count": null,
       "outputs": []
