--- a/00_pytorch_fundamentals.ipynb
+++ b/00_pytorch_fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMuiAbUdey/nR3nsOl7GZNF",
+      "authorship_tag": "ABX9TyOiYJhRU9+PVpzjQYUswHEc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2717,10 +2717,98 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Reproducibility (Trying to take random out of random)"
+      ],
+      "metadata": {
+        "id": "QPPNGoVNSiRA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "random_tensor_A = torch.rand(3,4)\n",
+        "random_tensor_B = torch.rand(3,4)\n",
+        "print(\" The tensor A is :\", random_tensor_A)\n",
+        "print(\" The tensor B is :\", random_tensor_B)\n",
+        "print(\" Is tensor A is equals to random B\", random_tensor_A==random_tensor_B)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TAwrNlBRcKMX",
+        "outputId": "452191f1-d4c7-4aa7-e1f7-961c1da02ade"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " The tensor A is : tensor([[0.4902, 0.8021, 0.0463, 0.5179],\n",
+            "        [0.3383, 0.2594, 0.5517, 0.0721],\n",
+            "        [0.4214, 0.0177, 0.6856, 0.0167]])\n",
+            " The tensor B is : tensor([[0.5551, 0.6266, 0.6612, 0.5516],\n",
+            "        [0.7174, 0.1614, 0.5741, 0.4297],\n",
+            "        [0.0410, 0.7048, 0.0476, 0.8062]])\n",
+            " Is tensor A is equals to random B tensor([[False, False, False, False],\n",
+            "        [False, False, False, False],\n",
+            "        [False, False, False, False]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "RANDOM =42\n",
+        "torch.manual_seed(RANDOM)\n",
+        "random_tensor_C = torch.rand(3,4)\n",
+        "\n",
+        "torch.manual_seed(RANDOM)\n",
+        "random_tensor_D = torch.rand(3,4)\n",
+        "print(random_tensor_C)\n",
+        "print(random_tensor_D)\n",
+        "print(random_tensor_C==random_tensor_D)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J25fF1t1cg-0",
+        "outputId": "3c58a938-777e-4ccc-b668-59b05254d352"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[0.8823, 0.9150, 0.3829, 0.9593],\n",
+            "        [0.3904, 0.6009, 0.2566, 0.7936],\n",
+            "        [0.9408, 0.1332, 0.9346, 0.5936]])\n",
+            "tensor([[0.8823, 0.9150, 0.3829, 0.9593],\n",
+            "        [0.3904, 0.6009, 0.2566, 0.7936],\n",
+            "        [0.9408, 0.1332, 0.9346, 0.5936]])\n",
+            "tensor([[True, True, True, True],\n",
+            "        [True, True, True, True],\n",
+            "        [True, True, True, True]])\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "QPPNGoVNSiRA"
+        "id": "UPBVhMD6di8O"
       },
       "execution_count": null,
       "outputs": []
