Setting up device agnostic code

--- a/00_pytorch_fundamentals.ipynb
+++ b/00_pytorch_fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMHvTogJDiktb2IP0IesJc+",
+      "authorship_tag": "ABX9TyOAHtn7t/b/hy8p4CHPXMzw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2990,9 +2990,9 @@
           "height": 35
         },
         "id": "UQH2tsTLbe9q",
-        "outputId": "e90c5566-6b62-4c78-f9e9-5c8c31ded6c3"
+        "outputId": "50671c82-9baf-4661-f10c-c85a42dfd34d"
       },
-      "execution_count": 103,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3005,7 +3005,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 103
+          "execution_count": 116
         }
       ]
     },
@@ -3037,10 +3037,163 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Setting up device agnostic code"
+      ],
+      "metadata": {
+        "id": "qLZbyhayb4Ov"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor = torch.tensor([1,2,3])\n",
+        "tensor\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dP8cBl6YeL7e",
+        "outputId": "c377ac3e-14de-48c4-cab2-a601f496d380"
+      },
+      "execution_count": 132,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([1, 2, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 132
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(tensor,tensor.device)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2P2_WO5teWHP",
+        "outputId": "5430a682-9e2f-43f5-8ebc-2ac4f7598867"
+      },
+      "execution_count": 133,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([1, 2, 3]) cpu\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Moving tensor to GPU\n",
+        "tensor_on_gpu = tensor\n",
+        "tensor_on_gpu.device"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0xeytloxeelN",
+        "outputId": "1f87773b-b5c9-45df-fb44-356dffbc9227"
+      },
+      "execution_count": 138,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "device(type='cpu')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 138
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Movind Tensor back to CPU"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "i7z4ipb0eiKe",
+        "outputId": "c491d080-169a-4447-8f63-88b6c0c9f473"
+      },
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'GPU'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 111
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Putting tensor on GPU"
+      ],
+      "metadata": {
+        "id": "hBjWTNnSer8K"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor_back_to_cpu = tensor_on_gpu.cpu().numpy()\n",
+        "tensor_back_to_cpu"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V7SD30E6e3uS",
+        "outputId": "8f35922e-ac60-446f-9e9f-9e55c14e52b2"
+      },
+      "execution_count": 140,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 2, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 140
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "qLZbyhayb4Ov"
+        "id": "XGo-Q-8Mg_wm"
       },
       "execution_count": null,
       "outputs": []
