Creating Training and test split

--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPQeUPVcv3F3hRv4H2Y2Wvk",
+      "authorship_tag": "ABX9TyNkzqSzQ3Rio+uAlQ0VDEeU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,9 +65,9 @@
           "height": 35
         },
         "id": "q5d0xdVfz8rK",
-        "outputId": "b27babad-2ed6-4dbf-e8cf-12511a3d364f"
+        "outputId": "e7e8d7f7-a680-4fec-b5f2-e3d2cd4d68e8"
       },
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -80,7 +80,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 1
         }
       ]
     },
@@ -115,17 +115,17 @@
         "end = 1\n",
         "steps=0.02\n",
         "X = torch.arange(start, end, steps).unsqueeze(dim=1)\n",
-        "Y= weight* X + bias\n",
-        "X[:10] ,Y[:10]"
+        "y= weight* X + bias\n",
+        "X[:10] ,y[:10]"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vumodyco1mzU",
-        "outputId": "4b029d18-aaa8-43c6-c7cb-6f36df1245b2"
+        "outputId": "729235df-3644-4353-a160-7edb66773902"
       },
-      "execution_count": 12,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -154,21 +154,53 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 5
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "len(X), len(Y)"
+        "len(X), len(y)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "HLWAPGlp7N5Q",
-        "outputId": "dbbcb427-03f3-480a-9b46-763845fa6147"
+        "outputId": "392a5f05-fd76-4d73-c962-e84e1aeab66f"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(50, 50)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Creating Training and test split\n",
+        "split = int(len(X)*0.8)\n",
+        "X_training= X[:split]\n",
+        "y_training= y[:split]\n",
+        "X_test = X[split:]\n",
+        "y_test=y[split:]\n",
+        "len(X_training), len(y_training), len(X_test), len(y_test)"
+      ],
+      "metadata": {
+        "id": "8rEr8daX8ZBk",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3a0defee-373f-4a08-c4be-ed8e1daa40bb"
       },
       "execution_count": 13,
       "outputs": [
@@ -176,7 +208,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(50, 50)"
+              "(40, 40, 10, 10)"
             ]
           },
           "metadata": {},
@@ -188,7 +220,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "8rEr8daX8ZBk"
+        "id": "O-OHMYHpCPDK"
       },
       "execution_count": null,
       "outputs": []
